[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atulya-data-scruber"
dynamic = ["version"]
description = "Cross-platform CLI tool for cleaning and transforming business data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
    "rich>=12.0.0",
    "python-dotenv>=0.20.0",
    "chardet>=5.0.0",
]

[project.scripts]
atulya-scrub = "atulya_data_scruber.cli:main"

[tool.setuptools.dynamic]
version = {attr = "atulya_data_scruber.__version__"}

[tool.setuptools.packages.find]
include = ["*"]

